<resources>
    <string name="app_name">Aikaan</string>

    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_available">Not available</string>
    <string name="now">Now</string>

    <!-- Short mText welcoming the user to the application -->
    <string name="welcome_to_aikaan_app">Welcome to the Aikaan app!</string>

    <!-- Medium-length welcome mText indicating the subsequent mText is important legal information -->
    <string name="welcome_text">Before we begin, here is some important legal information regarding your use of this app. This will only take a minute!</string>

    <string name="action_inbox">Inbox</string>
    <string name="action_summary">Summary</string>
    <string name="action_settings">Settings</string>
     <string name="action_24h">24h</string>
    <string name="action_3days">3 days</string>
    <string name="action_5days">5 days</string>

    <string name="title_activity_splash">SplashActivity</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_process">Running Apps</string>
    <string name="title_activity_inbox">Inbox</string>

    <string name="title_fragment_home">Aikaan</string>
    <string name="title_fragment_device">My Device</string>
    <string name="title_fragment_stats">Statistics</string>
    <string name="title_fragment_history">History</string>
    <string name="title_fragment_about">About</string>



    <!-- HomeFragment -->
    <string name="battery_right_now">Right now</string>
    <string name="battery_measure">Measuring</string>
    <string name="battery_full">Full</string>

    <string name="battery_summary_temperature">Temperature</string>
    <string name="battery_summary_voltage">Voltage</string>
    <string name="battery_summary_health">Health</string>
    <string name="battery_summary_technology">Technology</string>

    <string name="battery_health_unknown">Unknown</string>
    <string name="battery_health_good">Good</string>
    <string name="battery_health_overheat">Overheat</string>
    <string name="battery_health_dead">Dead</string>
    <string name="battery_health_over_voltage">Over Voltage</string>
    <string name="battery_health_failure">Unspecified Failure</string>

    <!-- DeviceFragment -->
    <string name="device_summary_title">Summary</string>
    <string name="device_summary_id_label">Aikaan ID</string>
    <string name="device_summary_model_label">Device model</string>
    <string name="device_summary_os_label">OS version</string>
    <string name="device_summary_kernel_label">Kernel version</string>
    <string name="device_summary_battery_label">Battery</string>
    <string name="device_summary_cpu_label">CPU</string>
    <string name="device_summary_memory_label">Memory usage</string>
    <string name="device_summary_network_label">Network</string>

    <string name="card_no_value">#####</string>
    <string name="card_no_value_short">##</string>
    <string name="card_no_value_dash">--</string>
    <string name="card_view_more">View more</string>

    <string name="device_card_title">Device</string>
    <string name="device_card_android">Android</string>
    <string name="device_card_model">Model</string>

    <string name="network_card_title">Network</string>
    <string name="network_card_wifi">Wifi</string>
    <string name="network_card_ip">IP address</string>
    <string name="network_card_mac">Mac address</string>
    <string name="network_card_ssid">SSID network</string>
    <string name="network_card_bluetooth">Bluetooth</string>
    <string name="network_card_bluetooth_address">Bluetooth address</string>
    <string name="network_card_mobile_data">Mobile data</string>
    <string name="network_card_network_type">Network type</string>

    <string name="sensors_card_title">Sensors</string>
    <string name="sensors_card_name">Name</string>
    <string name="sensors_card_power">Power</string>
    <string name="sensors_card_type">Type</string>
    <string name="sensors_card_iswakeup">Wake up</string>
    <string name="sensors_card_inuse">In use</string>
    <string name="sensors_card_usefrequency">Use frequency</string>
    <string name="sensors_card_details">Details</string>

    <string name="memory_card_title">Memory</string>
    <string name="memory_card_used">Used</string>
    <string name="memory_card_available">Available</string>

    <string name="storage_card_title">Storage</string>
    <string name="storage_card_used">Used</string>
    <string name="storage_card_available">Available</string>

    <!-- StatisticsFragment -->
    <string name="chart_battery_level">Battery Level (%)</string>
    <string name="chart_battery_temperature">Battery Temperature (ºC)</string>
    <string name="chart_battery_voltage">Battery Voltage (V)</string>
    <string name="chart_average_title">Average</string>
    <string name="chart_loading_data">Loading Data&#8230;</string>



    <!-- Event Post messages -->
    <string name="event_idle">Idle</string>
    <string name="event_samples">samples</string>
    <string name="event_uploading">Uploading</string>
    <string name="event_new_sample">Getting new sample&#8230;</string>
    <string name="event_no_samples">No samples to send&#8230;</string>
    <string name="event_upload_finished">Upload is finished!</string>
    <string name="event_get_processes">Getting processes list&#8230;</string>
    <string name="event_no_connectivity">No Internet connectivity.</string>
    <string name="event_upload_running">Upload is already running&#8230;</string>
    <string name="event_already_registered">Device is already registered</string>
    <string name="event_registration_failed">Device registration failed!</string>
    <string name="event_device_registered">Device registered successfully!</string>
    <string name="event_server_not_responding">Server is not responding&#8230;</string>
    <string name="event_error_uploading_sample">Server error uploading a sample!</string>
    <string name="event_server_response_failed">Server response has failed&#8230;</string>
    <string name="event_needs_sync">It needs to sync with server. Try again later</string>

    <!-- TaskList Activity -->
    <string name="task_no_apps_running">No apps running&#8230;</string>
    <string name="task_no_apps_killed">No apps killed&#8230;</string>
    <string name="task_killed">Killed</string>
    <string name="task_cleared">Cleared</string>
    <string name="task_free_ram">Free RAM</string>

    <!-- Process List -->
    <string name="expected">Expected improvement:</string>
    <string name="killappname">Kill App Name</string>
    <string name="appname">App Name</string>
    <string name="priority">Priority:</string>
    <string name="priorityDefault">Not running</string>
    <string name="prioritynotrunning">Not running</string>
    <string name="priorityforeground">Foreground App</string>
    <string name="prioritybackground">Background App</string>
    <string name="priorityservice">Service</string>
    <string name="priorityperceptible">Perceptible App</string>
    <string name="priorityvisible">Visible App</string>
    <string name="prioritysuggestion">Suggestion</string>

    <!-- Strings related to ProcessList -->
    <string name="action_sort_name">Sort by name</string>
    <string name="action_sort_memory">Sort by memory usage</string>

    <string name="button_undo">UNDO</string>

    <string name="kill_app_dialog_text">It looks like this app can not be killed by third-party apps.\n\nDo you want to open the app system settings to kill it manually?"</string>
    <string name="force_close">Force close</string>

    <string name="package_usage_permission_title">App permission</string>
    <string name="package_usage_permission_text">Looks like you are running Android N or newer. It is necessary to give a special permission so that Aikaan can work. You will be redirected there.</string>
    <string name="open_settings">Settings</string>

    <string name="auto_startup">Auto-startup</string>
    <string name="background_service">Background service</string>

    <string name="header_status_loading">Loading running apps</string>

    <!-- Notifications -->
    <string name="notif_aikaan_running">Aikaan is running</string>
    <string name="notif_new_message">You got a new message!</string>
     <string name="notif_battery_full">Battery is full</string>
    <string name="notif_remove_charger">Remove your phone from the charger</string>
    <string name="notif_battery_low">Battery is low</string>
    <string name="notif_connect_power">Connect your phone to a power source</string>
    <string name="notif_battery_warning">Battery warning</string>
    <string name="notif_battery_warm">Temperature is getting warm</string>
    <string name="notif_battery_hot">Battery temperature is hot!</string>
    <string name="notif_battery_cooldown">Cool-down your phone for a while</string>

    <!-- Strings related to SettingsInfo -->
    <string name="pref_header_sampling">Sampling</string>
    <string name="pref_header_upload">Uploads</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_task_manager">Task Manager</string>
    <string name="pref_header_about">About</string>

    <string name="pref_title_sampling_screen">Track screen events</string>
    <string name="pref_description_sampling_screen">Save data on screen on/off</string>
    <string name="pref_title_old_measurement">Use old measurement method</string>
    <string name="pref_description_old_measurement">Try this, if current now value is 0 all the time</string>

    <string name="pref_title_data_history">Data history</string>

    <string name="pref_title_auto_upload">Automatic uploads</string>

    <string name="pref_title_mobile_data">Use mobile data</string>
    <string name="pref_description_mobile_data">Upload with cellular data</string>

    <string name="pref_title_upload_rate">Uploading rate</string>

    <string name="pref_title_power_indicator">Power indicator</string>

    <string name="pref_title_battery_alerts">Battery alerts</string>
    <string name="pref_description_battery_alerts">Show charging and temperature alerts</string>

    <string name="pref_title_charge_alerts">Charging/Discharging alerts</string>
    <string name="pref_description_charge_alerts">Show battery charge related alerts</string>

    <string name="pref_title_temperature_alerts">Temperature alerts</string>
    <string name="pref_description_temperature_alerts">Show battery temperature alerts</string>

    <string name="pref_title_temperature_rate">Temperature alerts rate</string>

    <string name="pref_title_temperature_warning">Temperature warning</string>
    <string name="pref_description_temperature_warning">Degrees value of temperature warning</string>

    <string name="pref_title_temperature_high">Temperature high</string>
    <string name="pref_description_temperature_high">Degrees value of temperature high</string>

    <string name="pref_title_message_alerts">New message alerts</string>
    <string name="pref_description_message_alerts">Show incoming messages notifications</string>

    <string name="pref_title_priority">Priority</string>

    <string name="pref_title_system_apps">Hide system apps</string>

    <string name="pref_title_version">App Version</string>

    <string name="pref_title_device_id">Aikaan ID</string>






 </resources>
