<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/spacing_normal"
    app:cardUseCompatPadding="true"
    android:id="@+id/cv">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_normal"
            android:text="@string/device_card_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textStyle="normal|bold"/>

        <include layout="@layout/item_divider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_normal">

            <ImageView
                android:id="@+id/androidVersionIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/androidVersionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_card_android"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/list_item_margin"
                android:layout_marginStart="@dimen/list_item_margin" />

            <TextView
                android:id="@+id/androidVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_no_value"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <include layout="@layout/item_divider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_normal">

            <ImageView
                android:id="@+id/androidModelIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               />

            <TextView
                android:id="@+id/androidModelLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_card_model"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/list_item_margin"
                android:layout_marginStart="@dimen/list_item_margin" />

            <TextView
                android:id="@+id/androidModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_no_value"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <include layout="@layout/item_divider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_normal">

            <ImageView
                android:id="@+id/androidImeiIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/androidImeiLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="IMEI / ESN"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/list_item_margin"
                android:layout_marginStart="@dimen/list_item_margin" />

            <TextView
                android:id="@+id/androidImei"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="#####"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <include layout="@layout/item_divider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_normal">

            <ImageView
                android:id="@+id/androidRootIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />

            <TextView
                android:id="@+id/androidRootLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rooted"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/list_item_margin"
                android:layout_marginStart="@dimen/list_item_margin" />

            <TextView
                android:id="@+id/androidRoot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="##"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>